--- a/conference/index.html
+++ b/conference/index.html
@@ -169,10 +169,114 @@
       <div class="text-center"><img src="../images/banner_2024.png" style="width:90%;" alt="Conference artwork" class="img-responsive"/></div>
 <hr>
 <h1 id="save-the-date">Save the date!</h1>
-<p>SUMO User Conference 2024: <strong>May 13-15</strong>.</p>
-<div style="background-color: #d1d9db; padding: 20px; border-radius: 10px;">
-<center><i style="color: #7fa3a3; font-size: 3rem; font-weight: 700;">More info coming soon ...</i></center>
+<p>SUMO User Conference 2024: <strong>May 13-15</strong> in Berlin.</p>
+<h1 id="call-for-papers">Call for Papers</h1>
+<p>The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):</p>
+<ul>
+<li>Mobility and Demand Modelling</li>
+<li>Traffic Simulation</li>
+<li>Open Tools and Open Data</li>
+<li>Modelling Urban Mobility</li>
+<li>Traffic Applications</li>
+<li>Traffic Management Solutions</li>
+<li>Intermodal Transport</li>
+<li>Autonomous Driving</li>
+<li>Logistics Simulation</li>
+<li>Vehicular Communication</li>
+<li>E-Mobility</li>
+<li>Reinforcement learning / Machine Learning</li>
+</ul>
+<h1 id="paper-submission">Paper Submission</h1>
+<p>There are two submission types:</p>
+<hr>
+<ol>
+<li>Scientific Papers:
+<ul>
+<li>All accepted scientific papers must be presented at the conference.</li>
+<li>Scientific papers will be reviewed by at least 2 reviewers.</li>
+<li>All accepted scientific papers will be published in the <a href="https://www.tib-op.org/ojs/index.php/scp/index">SUMO proceedings</a>.</li>
+<li><em><strong>Optional:</strong> A title and short abstract (up to 300 words) can be submitted until Friday, <strong>January 12th, 2024</strong>, to get some first feedback.</em></li>
+<li>Scientific papers should be between 5 and 20 pages long.</li>
+<li><span style="color:darkorange">The Paper must be submitted in LaTeX or Word format before midnight, Friday, <strong>February 16th, 2024</strong>.</span></li>
+</ul>
+</li>
+</ol>
+<div class="alert alert-info" role="alert">
+  Authors are required to use the <a href="https://www.tib-op.org/ojs/index.php/scp/libraryFiles/downloadPublic/8">Word</a> or <a href="https://www.tib-op.org/ojs/index.php/scp/libraryFiles/downloadPublic/9">LaTeX</a> template provided by TIB Open Publishing.
 </div>
+<div class="text-center"><img src="../images/presentation.jpeg" style="width:60%;" alt="Presentation" class="img-responsive"/></div>
+<hr>
+<br>
+<ol start="2">
+<li>Posters:
+<ul>
+<li>The SUMO conference gives the opportunity to present your topic during the poster session.</li>
+<li>There is no need to write a scientific paper.</li>
+<li>Possible contents can be:
+<ul>
+<li>Results of Bachelor or Master theses</li>
+<li>Live Demos</li>
+<li>SUMO Use Cases</li>
+<li>Project Presentations</li>
+<li>Work in Progress which would benefit from the feedback of other SUMO users</li>
+</ul>
+</li>
+<li>The Posters do not require following a specific template, but should be formatted in the A0 size (841 x 1189 mm / 33.1 x 46.8 in).</li>
+<li>We will print the poster for you, provide the display panel, a chair and a table.</li>
+<li>While changes to the poster are still possible after the submission deadline, we unfortunately will not be able to reprint it. If you do need to make changes, you would need to bring a printout of the updated version with you.</li>
+<li>You are welcome to bring a laptop or other device to show a demo, slides, videos or any material that you deem appropriate to complement the presentation. In this case you will need to provide your own equipment.</li>
+<li><span style="color:darkorange">Title and a short abstract (up to 300 words) <strong>must be</strong> submitted until Friday, <strong>February 09th, 2024</strong>.</span></li>
+</ul>
+</li>
+</ol>
+<div class="text-center"><img src="../images/poster_session.jpeg" style="width:60%;" alt="Poster session" class="img-responsive"/></div>
+<hr>
+<h2 id="submission-link">Submission Link</h2>
+<p><em>Will be available soon.</em></p>
+<h2 id="ethics-and-malpractice-statement">Ethics and Malpractice Statement</h2>
+<p>You can read our <em><a href="../docs/SUMOPublicationEthics.pdf">Publication Ethics and Publication Malpractice Statement</a></em>, where we list the responsibilities of editors, reviewers, and authors.</p>
+<h1 id="important-dates">Important Dates</h1>
+<p>For Papers:</p>
+<ul>
+<li><strong>Optional</strong> title and abstract submission, until: <strong>Friday, January 12th, 2024</strong>.</li>
+<li><span style="color:darkorange">Paper submission deadline: <strong>Friday, February 16th, 2024</strong>.</span></li>
+<li>Notification of acceptance/rejection: <strong>End of March, 2024</strong>.</li>
+<li>Camera Ready Paper deadline: <strong>Friday, April 19th, 2024</strong>.</li>
+</ul>
+<p>For Posters:</p>
+<ul>
+<li><span style="color:darkorange"><strong>Mandatory</strong> title and abstract submission deadline: <strong>Friday, February 09th, 2024</strong>.</span></li>
+<li>Notification of acceptance/rejection: <strong>Mid of March, 2024</strong>.</li>
+<li>Final Poster upload deadline: <strong>Friday, April 12th, 2024</strong>.</li>
+</ul>
+<h1 id="agenda">Agenda</h1>
+<p><em>Available end of March 2024</em></p>
+<h1 id="keynote">Keynote</h1>
+<p><em>More info coming soon</em></p>
+<h1 id="prices">Prices</h1>
+<ul>
+<li>Regular Ticket: <strong>495 EUR</strong></li>
+<li>One-Day-Ticket: <strong>325 EUR</strong></li>
+<li>Authors and Project Partners: <strong>275 EUR</strong></li>
+<li>&ldquo;Limited&rdquo; Student Grants: <strong>50 EUR</strong></li>
+</ul>
+<p>All prices are Tax-excluded</p>
+<h1 id="registration">Registration</h1>
+<p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and a social event in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
+<p><em>Registration link coming soon</em></p>
+<h1 id="social-event">Social Event</h1>
+<p><em>More info coming soon</em></p>
+<!-- # FAQ
+
+<details> <!-- <details open> -->
+<!--
+  <summary>Hello</summary>
+  World
+</details>
+<details>
+  <summary>Foo</summary>
+  Bar
+</details> -->
 <h1 id="language">Language</h1>
 <p>The conference language is English.</p>
 <h1 id="venue">Venue</h1>
@@ -214,6 +318,19 @@ Germany</p>
 <nav id="TableOfContents">
   <ul>
     <li><a href="#save-the-date">Save the date!</a></li>
+    <li><a href="#call-for-papers">Call for Papers</a></li>
+    <li><a href="#paper-submission">Paper Submission</a>
+      <ul>
+        <li><a href="#submission-link">Submission Link</a></li>
+        <li><a href="#ethics-and-malpractice-statement">Ethics and Malpractice Statement</a></li>
+      </ul>
+    </li>
+    <li><a href="#important-dates">Important Dates</a></li>
+    <li><a href="#agenda">Agenda</a></li>
+    <li><a href="#keynote">Keynote</a></li>
+    <li><a href="#prices">Prices</a></li>
+    <li><a href="#registration">Registration</a></li>
+    <li><a href="#social-event">Social Event</a></li>
     <li><a href="#language">Language</a></li>
     <li><a href="#venue">Venue</a></li>
     <li><a href="#contact">Contact</a></li>
@@ -231,6 +348,22 @@ Germany</p>
   </div>
 </section>
 
+        <div aria-live="polite" aria-atomic="true" style="position: fixed ; bottom: 0; right: 10px; z-index: 1050; min-height: 250px;">
+            <div id="survey_notice" class="toast" data-autohide="false" >
+              <div class="toast-header">
+                <i class="fa-regular fa-face-smile"></i>
+                <strong class="ml-2 mr-auto">Provide feedback!</strong>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="toast-body">
+                We would love to hear your feedback! Participate in our short survey (only three questions) <a href="https://docs.google.com/forms/d/e/1FAIpQLSfMkTlWJnyF5GbcmIuHxn5xSuwOJSVN1iqzqiOfuLZ1_evW-A/viewform">here</a>.
+                <br><br>
+                Thanks!
+              </div>
+            </div>
+          </div>
         </div>
 <button onclick="goTopFunction()" id="goToTop" title="Go to top"><i class="fa fa-arrow-up"></i></button>
 
@@ -340,5 +473,9 @@ Germany</p>
       document.documentElement.scrollTop = 0;
     }
   </script>
-</body>
+<script>
+$('#survey_notice').toast('show');
+</script>
+
+    </body>
 </html>
