--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           </div>
           <div class="card-body text-center">
             
-            Save the date!
+            Check out the Call for Papers <a href="https://www.eclipse.dev/sumo/conference">here</a>.
           </div>
         </div>
       </a>
