adding 2024 submission link + removing feedback toast

--- a/conference/index.html
+++ b/conference/index.html
@@ -232,7 +232,15 @@
 <div class="text-center"><img src="../images/poster_session.jpeg" style="width:60%;" alt="Poster session" class="img-responsive"/></div>
 <hr>
 <h2 id="submission-link">Submission Link</h2>
-<p><em>Will be available soon.</em></p>
+<p>Submit Papers and Posters here: <a href="https://www.tib-op.org/ojs/index.php/scp/about/submissions">https://www.tib-op.org/ojs/index.php/scp/about/submissions</a><br>
+<small>Login or register and then click on <b>&ldquo;Make a new Conference Proceedings Submission&rdquo;</b></small>
+<br></p>
+<div class="alert alert-warning" role="alert">
+  <h6 class="alert-heading">Important notice only for Posters:</h6>
+  Please manually prepend <code>(Poster)</code> to the title, in the submission. (e.g. <code><i>(Poster) My current project with SUMO</i></code>)
+  <br>
+  <img src="../images/poster_sub.png" style="width:100%; margin-top:10px" alt="Example image" class="img-responsive"/>
+</div>
 <h2 id="ethics-and-malpractice-statement">Ethics and Malpractice Statement</h2>
 <p>You can read our <em><a href="../documents/SUMOPublicationEthics.pdf">Publication Ethics and Publication Malpractice Statement</a></em>, where we list the responsibilities of editors, reviewers, and authors.</p>
 <h1 id="important-dates">Important Dates</h1>
@@ -348,22 +356,7 @@ Germany</p>
   </div>
 </section>
 
-        <div aria-live="polite" aria-atomic="true" style="position: fixed ; bottom: 0; right: 10px; z-index: 1050; min-height: 250px;">
-            <div id="survey_notice" class="toast" data-autohide="false" >
-              <div class="toast-header">
-                <i class="fa-regular fa-face-smile"></i>
-                <strong class="ml-2 mr-auto">Provide feedback!</strong>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="toast-body">
-                We would love to hear your feedback! Participate in our short survey (only three questions) <a href="https://docs.google.com/forms/d/e/1FAIpQLSfMkTlWJnyF5GbcmIuHxn5xSuwOJSVN1iqzqiOfuLZ1_evW-A/viewform">here</a>.
-                <br><br>
-                Thanks!
-              </div>
-            </div>
-          </div>
+
         </div>
 <button onclick="goTopFunction()" id="goToTop" title="Go to top"><i class="fa fa-arrow-up"></i></button>
 
@@ -473,9 +466,7 @@ Germany</p>
       document.documentElement.scrollTop = 0;
     }
   </script>
-<script>
-$('#survey_notice').toast('show');
-</script>
+
 
     </body>
 </html>
