adding registration notice

--- a/conference/index.html
+++ b/conference/index.html
@@ -271,6 +271,10 @@
 <p>All prices are Tax-excluded</p>
 <h1 id="registration">Registration</h1>
 <p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and a social event in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
+<div class="alert alert-info" role="alert">
+  <b>Non-EU nationals:</b> Please register well in advance, to facilitate internal proceedings - and (if necessary) ensure a smooth visa application process.
+</div>
+<p>The registration will be open starting February 1st and close on April 30th at 23:59 CEST</p>
 <p><em>Registration link coming soon</em></p>
 <h1 id="social-event">Social Event</h1>
 <p><em>More info coming soon</em></p>
