added generated files

--- a/conference/index.html
+++ b/conference/index.html
@@ -168,6 +168,16 @@
       
       <div class="text-center"><img src="../images/banner_2024.png" style="width:90%;" alt="Conference artwork" class="img-responsive"/></div>
 <hr>
+<!-- ALERT 1 - Neue paper deadline -->
+<!-- <div class="alert alert-primary" role="alert">
+   New Paper submission deadline: Friday, <b>February 23th, 2024 - 23:59 CET</b>.
+</div> -->
+<!-- ALERT 2 - Registrierungslink bitte noch einsetzten -->
+<!-- <div class="alert alert-success" role="alert">
+  Registration is now open: <a href="XXX">XXX</a>
+  <br>
+  <small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small>
+</div> -->
 <h1 id="save-the-date">Save the date!</h1>
 <p>SUMO User Conference 2024: <strong>May 13-15</strong> in Berlin.</p>
 <h1 id="call-for-papers">Call for Papers</h1>
@@ -195,7 +205,7 @@
 <li>All accepted scientific papers must be presented at the conference.</li>
 <li>Scientific papers will be reviewed by at least 2 reviewers.</li>
 <li>All accepted scientific papers will be published in the <a href="https://www.tib-op.org/ojs/index.php/scp/index">SUMO proceedings</a>.</li>
-<li><em><strong>Optional:</strong> A title and short abstract (up to 300 words) can be submitted until Friday, <strong>January 12th, 2024</strong>, to get some first feedback.</em></li>
+<li><del>Optional: A title and short abstract (up to 300 words) can be submitted until Friday, January 12th, 2024, to get some first feedback.</del></li>
 <li>Scientific papers should be between 5 and 20 pages long.</li>
 <li><span style="color:darkorange">The Paper must be submitted in LaTeX or Word format before midnight, Friday, <strong>February 16th, 2024</strong>.</span></li>
 </ul>
@@ -246,7 +256,7 @@
 <h1 id="important-dates">Important Dates</h1>
 <p>For Papers:</p>
 <ul>
-<li><strong>Optional</strong> title and abstract submission, until: <strong>Friday, January 12th, 2024</strong>.</li>
+<li><del>Optional title and abstract submission, until: Friday, January 12th, 2024.</del></li>
 <li><span style="color:darkorange">Paper submission deadline: <strong>Friday, February 16th, 2024</strong>.</span></li>
 <li>Notification of acceptance/rejection: <strong>End of March, 2024</strong>.</li>
 <li>Camera Ready Paper deadline: <strong>Friday, April 19th, 2024</strong>.</li>
