--- a/conference/index.html
+++ b/conference/index.html
@@ -172,12 +172,11 @@
 <!-- <div class="alert alert-primary" role="alert">
    New Paper submission deadline: Friday, <b>February 23th, 2024 - 23:59 CET</b>.
 </div> -->
-<!-- ALERT 2 - Registrierungslink bitte noch einsetzten -->
-<!-- <div class="alert alert-success" role="alert">
-  Registration is now open: <a href="XXX">XXX</a>
+<div class="alert alert-success" role="alert">
+  Registration is now open: <a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a>
   <br>
   <small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small>
-</div> -->
+</div>
 <h1 id="save-the-date">Save the date!</h1>
 <p>SUMO User Conference 2024: <strong>May 13-15</strong> in Berlin.</p>
 <h1 id="call-for-papers">Call for Papers</h1>
@@ -282,7 +281,7 @@
 <h1 id="registration">Registration</h1>
 <p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and a social event in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
 <div class="alert alert-info" role="alert">
-  <b>Non-EU nationals:</b> Please register well in advance, to facilitate internal procedures - and (if necessary) ensure a smooth visa application process.
+  <b>Non-EU nationals:</b> Please register well in advance to facilitate internal procedures and (if necessary) ensure a smooth visa application process.
 </div>
 <p>The registration will be open starting February 1st and close on April 30th at 23:59 CEST</p>
 <p><em>Registration link coming soon</em></p>
@@ -306,10 +305,10 @@
 <div class="text-right">
 <small>View in: <a target="_blank" href="https://www.openstreetmap.org/?mlat=52.42799&amp;mlon=13.52919#map=19/52.42799/13.52919">OSM <i class="fa-solid fa-square-arrow-up-right"></i></a> - <a target="_blank" href="https://goo.gl/maps/c1mQDkkLF4H3QJjX7">Google Maps <i class="fa-solid fa-square-arrow-up-right"></i></a></small>
 </div>
-<p>German Aerospace Center (DLR)<br>
-Institute of Transportation Systems<br>
-Rutherfordstr. 2<br>
-12489 Berlin<br>
+<p>German Aerospace Center (DLR)
+Institute of Transportation Systems
+Rutherfordstr. 2
+12489 Berlin
 Germany</p>
 <h1 id="contact">Contact</h1>
 <p>Please contact the conference team via mail at <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a></p>
