--- a/index.html
+++ b/index.html
@@ -261,12 +261,11 @@
 <!-- <div class="alert alert-primary" role="alert">
    New Paper submission deadline: Friday, <b>February 23th, 2024 - 23:59 CET</b>.
 </div> -->
-<!-- ALERT 2 - Registrierungslink bitte noch einsetzten -->
-<!-- <div class="alert alert-success" role="alert">
-  Registration is now open: <a href="XXX">XXX</a>
+<div class="alert alert-success" role="alert">
+  Registration is now open: <a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a>
   <br>
   <small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small>
-</div> -->
+</div>
 <!-- YouTube Tutorial -->
 <p><a data-youtube href="https://www.youtube.com/watch?v=3J5KqOPT2qI"></a></p>
 <!-- Short text -->
