minor fixes for conference registration

--- a/conference/index.html
+++ b/conference/index.html
@@ -273,18 +273,19 @@
 <h1 id="prices">Prices</h1>
 <ul>
 <li>Regular Ticket: <strong>495 EUR</strong></li>
-<li>One-Day-Ticket: <strong>325 EUR</strong></li>
 <li>Authors and Project Partners: <strong>275 EUR</strong></li>
-<li>&ldquo;Limited&rdquo; Student Grants: <strong>50 EUR</strong></li>
+<li>Students: <strong>50 EUR</strong> (limited)</li>
 </ul>
-<p>All prices are Tax-excluded</p>
+<p><small>All prices excluding VAT.</small></p>
+<p>Please contact us via email at <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a> to request a discount code for student registration.
+The availability is limited.</p>
 <h1 id="registration">Registration</h1>
+<p>Registration is now open: <a href="https://sumo2024.welcome-manager.de/"><a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a></a></p>
+<p><small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small></p>
 <p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and a social event in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
 <div class="alert alert-info" role="alert">
   <b>Non-EU nationals:</b> Please register well in advance to facilitate internal procedures and (if necessary) ensure a smooth visa application process.
 </div>
-<p>The registration will be open starting February 1st and close on April 30th at 23:59 CEST</p>
-<p><em>Registration link coming soon</em></p>
 <h1 id="social-event">Social Event</h1>
 <p><em>More info coming soon</em></p>
 <!-- # FAQ
@@ -311,7 +312,7 @@ Rutherfordstr. 2
 12489 Berlin
 Germany</p>
 <h1 id="contact">Contact</h1>
-<p>Please contact the conference team via mail at <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a></p>
+<p>For questions and comments, the conference team can be reached at the email address <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a>.</p>
 </div>
     <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">
 <p class="sidebar-title"><b>Archive</b></p>
