--- a/conference/index.html
+++ b/conference/index.html
@@ -168,10 +168,9 @@
       
       <div class="text-center"><img src="../images/banner_2024.png" style="width:90%;" alt="Conference artwork" class="img-responsive"/></div>
 <hr>
-<!-- ALERT 1 - Neue paper deadline -->
-<!-- <div class="alert alert-primary" role="alert">
-   New Paper submission deadline: Friday, <b>February 23th, 2024 - 23:59 CET</b>.
-</div> -->
+<div class="alert alert-primary" role="alert">
+   New Paper and Poster submission deadline: Friday, <b>February 23rd, 2024 - 23:59 CET</b>.
+</div>
 <div class="alert alert-success" role="alert">
   Registration is now open: <a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a>
   <br>
@@ -206,7 +205,7 @@
 <li>All accepted scientific papers will be published in the <a href="https://www.tib-op.org/ojs/index.php/scp/index">SUMO proceedings</a>.</li>
 <li><del>Optional: A title and short abstract (up to 300 words) can be submitted until Friday, January 12th, 2024, to get some first feedback.</del></li>
 <li>Scientific papers should be between 5 and 20 pages long.</li>
-<li><span style="color:darkorange">The Paper must be submitted in LaTeX or Word format before midnight, Friday, <strong>February 16th, 2024</strong>.</span></li>
+<li><span style="color:darkorange">The Paper must be submitted in LaTeX or Word format before midnight, Friday, <strong>February 23rd, 2024</strong>.</span></li>
 </ul>
 </li>
 </ol>
@@ -234,7 +233,7 @@
 <li>We will print the poster for you, provide the display panel, a chair and a table.</li>
 <li>While changes to the poster are still possible after the submission deadline, we unfortunately will not be able to reprint it. If you do need to make changes, you would need to bring a printout of the updated version with you.</li>
 <li>You are welcome to bring a laptop or other device to show a demo, slides, videos or any material that you deem appropriate to complement the presentation. In this case you will need to provide your own equipment.</li>
-<li><span style="color:darkorange">Title and a short abstract (up to 300 words) <strong>must be</strong> submitted until Friday, <strong>February 09th, 2024</strong>.</span></li>
+<li><span style="color:darkorange">Title and a short abstract (up to 300 words) <strong>must be</strong> submitted until Friday, <strong>February 23rd, 2024</strong>.</span></li>
 </ul>
 </li>
 </ol>
@@ -256,13 +255,13 @@
 <p>For Papers:</p>
 <ul>
 <li><del>Optional title and abstract submission, until: Friday, January 12th, 2024.</del></li>
-<li><span style="color:darkorange">Paper submission deadline: <strong>Friday, February 16th, 2024</strong>.</span></li>
+<li><span style="color:darkorange">Paper submission deadline: <strong>Friday, February 23rd, 2024</strong>.</span></li>
 <li>Notification of acceptance/rejection: <strong>End of March, 2024</strong>.</li>
 <li>Camera Ready Paper deadline: <strong>Friday, April 19th, 2024</strong>.</li>
 </ul>
 <p>For Posters:</p>
 <ul>
-<li><span style="color:darkorange"><strong>Mandatory</strong> title and abstract submission deadline: <strong>Friday, February 09th, 2024</strong>.</span></li>
+<li><span style="color:darkorange"><strong>Mandatory</strong> title and abstract submission deadline: <strong>Friday, February 23rd, 2024</strong>.</span></li>
 <li>Notification of acceptance/rejection: <strong>Mid of March, 2024</strong>.</li>
 <li>Final Poster upload deadline: <strong>Friday, April 12th, 2024</strong>.</li>
 </ul>
