adding 2024 keynote title and abstract

--- a/about/index.html
+++ b/about/index.html
@@ -305,7 +305,7 @@
 <h6 id="bibtex">BibTeX</h6>
 <pre tabindex="0"><code>@inproceedings{SUMO2018,
           title = {Microscopic Traffic Simulation using SUMO},
-         author = {Pablo Alvarez Lopez and Michael Behrisch and Laura Bieker-Walz and Jakob Erdmann and Yun-Pang Fl{\&quot;o}tter{\&quot;o}d and Robert Hilbrich and Leonhard L{\&quot;u}cken and Johannes Rummel and Peter Wagner and Evamarie Wie{\ss}ner},
+         author = {Pablo Alvarez Lopez and Michael Behrisch and Laura Bieker-Walz and Jakob Erdmann and Yun-Pang Fl{\&#34;o}tter{\&#34;o}d and Robert Hilbrich and Leonhard L{\&#34;u}cken and Johannes Rummel and Peter Wagner and Evamarie Wie{\ss}ner},
       publisher = {IEEE},
       booktitle = {The 21st IEEE International Conference on Intelligent Transportation Systems},
            year = {2018},
