--- a/conference/index.html
+++ b/conference/index.html
@@ -266,6 +266,9 @@
 <p><em>Available end of March 2024</em></p>
 <h1 id="keynote">Keynote</h1>
 <h3><i>Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</i></h3>
+<img src="../images/Steven_Jones.jpg" alt="picture of Dr. Steven Jones" style="width:100px; border-radius: 50%; margin-bottom:10px;">
+<br>
+<small style="color: lightgray">© The University of Alabama</small>
 <h6>Dr. Steven Jones</h6>
 Alabama Transportation Institute<br>
 The University of Alabama<br>
