--- a/conference/index.html
+++ b/conference/index.html
@@ -259,7 +259,7 @@
 <p>For Posters:</p>
 <ul>
 <li><del>Mandatory title and abstract submission deadline: Friday, February 23rd, 2024.</del></li>
-<li>Notification of acceptance/rejection: <strong>Mid of March, 2024</strong>.</li>
+<li><del>Notification of acceptance/rejection: <strong>Mid of March, 2024</strong>.</del></li>
 <li>Final Poster upload deadline: <strong>Friday, April 12th, 2024</strong>.</li>
 </ul>
 <h1 id="agenda">Agenda</h1>
