--- a/conference/index.html
+++ b/conference/index.html
@@ -253,8 +253,8 @@
 <ul>
 <li><del>Optional title and abstract submission, until: Friday, January 12th, 2024.</del></li>
 <li><del>Paper submission deadline: Friday, February 23rd, 2024.</del></li>
-<li>Notification of acceptance/rejection: <strong>End of March, 2024</strong>.</li>
-<li>Camera Ready Paper deadline: <strong>Friday, April 19th, 2024</strong>.</li>
+<li><del>Notification of acceptance/rejection: <strong>End of March, 2024</strong>.</del></li>
+<li><span class="badge badge-warning">New</span> Camera Ready Paper deadline: <strong>Friday, April 26th, 2024</strong>.</li>
 </ul>
 <p>For Posters:</p>
 <ul>
