--- a/conference/index.html
+++ b/conference/index.html
@@ -287,6 +287,9 @@ The availability is limited.</p>
 <h1 id="registration">Registration</h1>
 <p>Registration is now open: <a href="https://sumo2024.welcome-manager.de/"><a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a></a></p>
 <p><small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small></p>
+<div class="alert alert-secondary" role="alert">
+  <b>Authors:</b> Paper or poster authors are required to register selecting the “Author & Project Partners” category.
+</div>
 <p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and a social event in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
 <div class="alert alert-info" role="alert">
   <b>Non-EU nationals:</b> Please register well in advance to facilitate internal procedures and (if necessary) ensure a smooth visa application process.
