--- a/conference/index.html
+++ b/conference/index.html
@@ -314,10 +314,10 @@ The availability is limited.</p>
 <div class="text-right">
 <small>View in: <a target="_blank" href="https://www.openstreetmap.org/?mlat=52.42799&amp;mlon=13.52919#map=19/52.42799/13.52919">OSM <i class="fa-solid fa-square-arrow-up-right"></i></a> - <a target="_blank" href="https://goo.gl/maps/c1mQDkkLF4H3QJjX7">Google Maps <i class="fa-solid fa-square-arrow-up-right"></i></a></small>
 </div>
-<p>German Aerospace Center (DLR)
-Institute of Transportation Systems
-Rutherfordstr. 2
-12489 Berlin
+<p>German Aerospace Center (DLR)<br>
+Institute of Transportation Systems<br>
+Rutherfordstr. 2<br>
+12489 Berlin<br>
 Germany</p>
 <h1 id="contact">Contact</h1>
 <p>For questions and comments, the conference team can be reached at the email address <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a>.</p>
