--- a/conference/index.html
+++ b/conference/index.html
@@ -166,7 +166,8 @@
     <div class="container"><div class="row">
     <div class="col-md-10 contact-div">
       
-      <div class="text-center"><img src="../images/banner_2024.png" style="width:90%;" alt="Conference artwork" class="img-responsive"/></div>
+      <!-- https://raw.githubusercontent.com/eclipse-sumo/sumo.website/88c6241d5dc095b7292c5b6068debd3132c6f86e/src/content/conference.md -->
+<div class="text-center"><img src="../images/banner_2024.png" style="width:90%;" alt="Conference artwork" class="img-responsive"/></div>
 <hr>
 <div class="alert alert-success" role="alert">
   Registration is now open: <a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a>
@@ -263,7 +264,219 @@
 <li>Final Poster upload deadline: <strong>Friday, April 12th, 2024</strong>.</li>
 </ul>
 <h1 id="agenda">Agenda</h1>
-<p><em>Available end of March 2024</em></p>
+<p><small>🕓 <i>Schedule given in Central European Summer Time (CEST) (UTC+2) - This agenda may be subject to change</i></small></p>
+<table style="border: 2px solid #bbb;">
+<thead>
+  <tr>
+    <th style="text-align:center" colspan="2">Monday, May 13, 2024</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td align="right">12:30 - 13:00</td>
+    <td colspan="2">
+    Registration<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">13:00 - 13:15</td>
+    <td>
+    Opening<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">13:15 - 14:30</td>
+    <td>
+    <b>SUMO Tutorial</b><br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:30 - 14:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:45 - 16:00</td>
+    <td>
+    <b>Ask us anything</b><br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">17:00</td>
+    <td colspan="2">
+   <b>Evening Program - Social Event</b><br>
+<a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a>
+    </td>
+  </tr>
+</tbody>
+</table>
+<br>
+<table style="border: 2px solid #bbb;">
+<thead>
+  <tr>
+    <th style="text-align:center" colspan="2">Tuesday, May 14, 2024</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td align="right">09:00 - 10:30<br><br>Session 1<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Yun-Pang Flötteröd</p></td>
+<td>
+    <b>Simulating Traffic Networks: Driving SUMO towards digital twins</b><br>
+    Axel Schaffland, Jonas Nelson and Julius Schöning <i><small>(all: Hochschule Osnabrück)</small></i>
+<hr>
+    <b>Leveraging SUMO for Real-World Traffic Optimization: A Comprehensive Approach</b><br>
+    Alon Bublil and Olga Dobrilko <i><small>(all: NoTraffic)</small></i>
+<hr>
+    <b>Calibration of Microscopic Traffic Simulation in an Urban Environment Using GPS-Data</b><br>
+    Christopher Stang and Klaus Bogenberger <i><small>(all: Technical University of Munich)</small></i>
+</td>
+  </tr>
+    <tr>
+    <td align="right">10:30 - 10:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">10:45 - 12:15<br><br>Session 2<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Robert Hilbrich</p></td>
+<td>
+    <b>Sumonity: Bridging SUMO and Unity for Enhanced Traffic Simulation Experiences</b><br>
+    Mathias Pechinger and Johannes Lindner <i><small>(all: Technical University of Munich)</small></i>
+<hr>
+    <b>Joining SUMO and Unreal Engine to Create a Bespoke 360 Degree Narrow Passage Driving Simulator</b><br>
+    Peter Youssef, Katherine Plant and Ben Waterson <i><small>(all: University of Southampton)</small></i>
+<hr>
+    <b>Integrating Topographical Map Information in SUMO to Simulate Realistic Micromobility Trips in Hilly and Steep Terrains</b><br>
+    Andreas Freymann <i><small>(Fraunhofer IAO)</small></i>, Emanuel Reichsöllner <i><small>(Hochschule Esslingen)</small></i>, Damir Ravlija <i><small>(Hochschule Esslingen)</small></i>, Ingo Trautwein <i><small>(Fraunhofer IAO)</small></i> and Mirko Sonntag <i><small>(Hochschule Esslingen)</small></i>
+</td>
+  </tr>
+  <tr>
+    <td style="text-align:center; background-color: #d9f1ff;" colspan="2"><b><i>Lunch </b></i>&#x1F957;</td>
+  </tr>
+  <tr>
+    <td align="right">13:00 - 14:00</td>
+    <td>
+    <b>Keynote:
+    Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</b><br>
+    Dr. Steven Jones <i><small>(Alabama Transportation Institute)</small></i>
+    <br>
+    <a style="color:#0645ad; cursor:pointer;" href="#keynote">Read more <i class="fas fa-angle-down"></i></a>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:00 - 14:15</td>
+    <td>
+    &#x1F4F7; <i>Conference Photo + Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:15 - 15:30<br><br>Session 3<br><b>Poster Session</b><br><br></td>
+<td>
+<ul>
+<i>More info coming soon</i>
+</ul>
+  </tr>
+    <tr>
+    <td align="right">15:30 - 15:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">15:45 - 17:15<br><br>Session 4<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Ronald Nippold</p></td>
+<td>
+    <b>Optimized Design of Low Emission Zones in SUMO: A Dual Focus on Emissions Reduction and Travel Time Improvement</b><br>
+    Alvaro Paricio-Garcia, Miguel A. Lopez-Carmona and Pablo Manglano <i><small>(all: Universidad de Alcalá)</small></i>
+<hr>
+    <b>Investigating SUMO’s emission and energy models with real case study</b><br>
+    Yun-Pang Flötteröd, Michael Behrisch and Peter Wagner <i><small>(all: DLR)</small></i>
+<hr>
+    <b>HybridPy: The Simulation Suite for Mesoscopic and Microscopic Traffic Simulations</b><br>
+    Joerg Schweizer <i><small>(University of Bologna)</small></i>, Fabian Schuhmann <i><small>(Technical University of Munich)</small></i> and Cristian Poliziani <i><small>(Lawrence Berkeley National Lab)</small></i>
+</td>
+  </tr>
+  <tr>
+    <td align="right">17:30</td>
+    <td><b>Evening Program - Barbecue</b> &#127830;
+    </td>
+  </tr>
+</tbody>
+</table>
+<br>
+<table style="border: 2px solid #bbb;">
+<thead>
+  <tr>
+    <th style="text-align:center" colspan="2">Wednesday, May 15, 2024</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td align="right">09:00 - 10:30<br><br>Session 5<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Peter Wagner</p></td>
+<td>
+    <b>Bus Priority Procedure for Signalized Intersections Based on Bus Occupancy and Delay</b><br>
+    Katia Juliane Schmidt, Natalie Steinmetz and Martin Margreiter <i><small>(all: Technical University of Munich)</small></i>
+<hr>
+    <b>rescuePY: Simulation-based Rescue Response Impact Assessment</b><br>
+    Fabian Schuhmann <i><small>(Technical University of Munich)</small></i>
+<hr>
+    <b>Generalistic Assessments of the Potential of Medical Drones in Urban Environment</b><br>
+    Felix Wachter <i><small>(Hochschule Kempten)</small></i>, Jannik Krivohlavek <i><small>(University Medical Center Groningen)</small></i>, Jonas Rossa <i><small>(Hochschule Kempten)</small></i> and Andreas Rupp <i><small>(Hochschule Kempten)</small></i>
+</td>
+  </tr>
+      <tr>
+    <td align="right">10:30 - 10:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">10:45 - 12:15<br><br>Session 6<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Jakob Erdmann</p></td>
+<td>
+    <b>Using SUMO for Test Automation and Demonstration of Digitalized Railway Concepts</b><br>
+    Arne Boockmeyer, Dirk Friedenberger and Lukas Pirl <i><small>(all: Hasso-Plattner-Institut)</small></i>
+<hr>
+    <b>Perspectives on an ALKS model in SUMO</b><br>
+    Robert Alms, Benjamin Couéraud and Peter Wagner<i><small>(all: DLR)</small></i>
+<hr>
+    <b>Calibrating Car-Following Models using SUMO-in-the-loop and Vehicle Trajectories from Roadside Radar</b><br>
+    Maxwell Schrader, Arya Karnik, Alexander Hainen and Joshua Bittle <i><small>(all: The University of Alabama)</small></i>
+</td>
+  </tr>
+  <tr>
+    <td style="text-align:center; background-color: #d9f1ff;" colspan="2"><b><i>Lunch </b></i>&#x1F957;</td>
+  </tr>
+  <tr>
+    <td align="right">13:00 - 14:30<br><br>Session 7<br><b>Poster Session</b><br><br></td>
+<td>
+<ul>
+<i>More info coming soon</i>
+</ul>
+    </td>
+  </tr>
+      <tr>
+    <td align="right">14:30 - 14:45</td>
+    <td>
+    <i>Coffee Break</i> &#x2615;<br>
+    </td>
+  </tr>
+  <tr>
+    <td align="right">14:45 - 15:45<br><br>Session 8<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Benjamin Couéraud</p></td>
+<td>
+    <b>Integration Traffic Signal Control From Synchro to SUMO</b><br>
+    Yiran Zhang <i><small>(University of Washington)</small></i>, Mingjian Fu <i><small>(INRIX Inc)</small></i> and Xuegang (Jeff) Ban <i><small>(University of Washington)</small></i>
+<hr>
+    <b>On Vehicular Data Aggregation in Federated Learning: A Case Study of Privacy with Parking Occupancy in Eclipse SUMO</b><br>
+    Levente Alekszejenkó and Tadeusz Dobrowiecki <i><small>(all: Budapest University of Technology and Economics)</small></i>
+</td>
+  </tr>
+  <tr>
+    <td align="right">15:45 - 16:10</td>
+    <td><b><i>Closing</i></b></td>
+  </tr>
+</tbody>
+</table>
+<small>Last update: 05.04.2024 - 14:29 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</i></h3>
 <img src="../images/Steven_Jones.jpg" alt="picture of Dr. Steven Jones" style="width:100px; border-radius: 50%; margin-bottom:10px;">
