notice to agenda + countdown

--- a/index.html
+++ b/index.html
@@ -257,10 +257,9 @@
 
   <div class="row">
     <div class="col-md-8 text-justify" >
-        <!-- ALERT 1 - Neue paper deadline -->
-<!-- <div class="alert alert-primary" role="alert">
-   New Paper submission deadline: Friday, <b>February 23th, 2024 - 23:59 CET</b>.
-</div> -->
+        <div class="alert alert-primary" role="alert">
+   The conference agenda is now available: <a href="https://eclipse.dev/sumo/conference/#agenda">Take a look</a>
+</div>
 <div class="alert alert-success" role="alert">
   Registration is now open: <a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a>
   <br>
@@ -291,13 +290,17 @@
             <img src="https://www.eclipse.dev/sumo/images/banner_2024.png" style="width: 100%">
           </div>
           <div class="card-body text-center">
-            
-            Check out the Call for Papers <a href="https://www.eclipse.dev/sumo/conference">here</a>.
+            <strong id="remaining-days"></strong> days remaining
           </div>
         </div>
       </a>
 
-      
+      <script>
+        let conference_date = new Date('05/13/2024');
+        let current_date = new Date();
+        var remainingDays = Math.ceil((conference_date.getTime() - current_date.getTime()) / (1000 * 3600 * 24));
+        document.getElementById("remaining-days").innerHTML = remainingDays;
+      </script>
 
     </div>
   </div>
