--- a/conference/index.html
+++ b/conference/index.html
@@ -47,7 +47,7 @@
     
         <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="https://www.eclipse.dev/sumo"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
+            <a class="navbar-brand" href="https://www.eclipse.dev/sumo/"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="menu icon">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -261,7 +261,7 @@
 <ul>
 <li><del>Mandatory title and abstract submission deadline: Friday, February 23rd, 2024.</del></li>
 <li><del>Notification of acceptance/rejection: <strong>Mid of March, 2024</strong>.</del></li>
-<li>Final Poster upload deadline: <strong>Friday, April 12th, 2024</strong>.</li>
+<li><del>Final Poster upload deadline: <strong>Friday, April 12th, 2024</strong>.</del></li>
 </ul>
 <h1 id="agenda">Agenda</h1>
 <p><small>🕓 <i>Schedule given in Central European Summer Time (CEST) (UTC+2) - This agenda may be subject to change</i></small></p>
