--- a/conference/index.html
+++ b/conference/index.html
@@ -47,7 +47,7 @@
     
         <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="https://www.eclipse.dev/sumo/"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
+            <a class="navbar-brand" href="https://www.eclipse.dev/sumo"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="menu icon">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -374,7 +374,16 @@
     <td align="right">14:15 - 15:30<br><br>Session 3<br><b>Poster Session</b><br><br></td>
 <td>
 <ul>
-<i>More info coming soon</i>
+<li>Investigation of DRT Services by Coupling Demand Modeling and Traffic Flow Simulation - <small>Dennis Harmann, Lasse Bienzeisler, Ronja Meier and Bernhard Friedrich</small></li>
+<li>CDASim: A Versatile Tool for Realistic Cooperative Driving Automation Simulation and Research - <small>Zhitong Huang, Kyle Rush, Danielle Chou, Pavle Bujanovic and Sudhakar Nallamothu</small></li>
+<li>Ingolstadt SUMO 365 – Generation and Calibration of a Microscopic Urban Model for various Scenarios - <small>Joel Brodersen and Christoph Stadler</small></li>
+<li>PROPOSAL FOR A LOW EMISSIONS ZONE IN THE HISTORIC CENTER OF THE CITY OF SAN LUIS POTOSÍ, MEXICO - <small>Missael Quilantan, Valter Barrera and Andres Ruiz</small></li>
+<li>Development of a 3D Visualization SUMO Tool for Traffic Simulations - <small>Maya Sekeran, Johannes Lindner, Faruk Öztürk, Mathias Pechinger and Klaus Bogenberger</small></li>
+<li>Automated conflict region calculation for intersection control with automated and connected vehicles - <small>Natalie Steinmetz, Tanja Niels and Klaus Bogenberger</small></li>
+<li>Simulation of 'phantom' traffic jams by modeling perception performance in SUMO - <small>Ivan Postigo, Clas Rydergren and Johan Olstam</small></li>
+<li>The Integration of SUMO into a Cluster-wide Simulation Pipeline for Mobility Innovations - <small>Fabian Schuhmann</small></li>
+<li><i>To be announced</i></li>
+<li><i>To be announced</i></li>
 </ul>
   </tr>
     <tr>
@@ -437,7 +446,7 @@
     Arne Boockmeyer, Dirk Friedenberger and Lukas Pirl <i><small>(all: Hasso-Plattner-Institut)</small></i>
 <hr>
     <b>Perspectives on an ALKS model in SUMO</b><br>
-    Robert Alms, Benjamin Couéraud and Peter Wagner<i><small>(all: DLR)</small></i>
+    Robert Alms, Benjamin Couéraud and Peter Wagner <i><small>(all: DLR)</small></i>
 <hr>
     <b>Calibrating Car-Following Models using SUMO-in-the-loop and Vehicle Trajectories from Roadside Radar</b><br>
     Maxwell Schrader, Arya Karnik, Alexander Hainen and Joshua Bittle <i><small>(all: The University of Alabama)</small></i>
@@ -450,7 +459,15 @@
     <td align="right">13:00 - 14:30<br><br>Session 7<br><b>Poster Session</b><br><br></td>
 <td>
 <ul>
-<i>More info coming soon</i>
+<li>Comprehensive simulation by coupling simulators for pedestrian and vehicle dynamics - <small>Ronald Nippold and Jette Schumann</small></li>
+<li>Collaborative, Distributed Testing Using Eclipse SUMO - <small>Danielle Chou, Robin Laqui and Stephen Moyer</small></li>
+<li>Real-time queue estimator for signalised intersections - based on detector data - <small>Maik Halbach and Jan Trumpold</small></li>
+<li>Utilisation of cooperative, automated vehicles with external HMI as part of traffic signal control - <small>Robert Oertel</small></li>
+<li>Machine-learning informed simulation-based dynamic traffic assignment with SUMO - <small>Jonas Jostmann, Gunnar Flötteröd and Zhenliang Ma</small></li>
+<li>MITIGATING URBAN AIR POLLUTION: CASE STUDY OF CALZADA DE GUADALUPE AVENUE IN SAN LUIS POTOSI CITY, MEXICO - <small>Andres Ruiz, Valter Barrera and Missael Quilantan</small></li>
+<li>Advancing Traffic Safety Simulation: Introducing a Modular Threat Response Model for E-Scooters in SUMO - <small>Pascal Brunner, Florian Denk, Felix Fröhling, Werner Huber, Klaus Bogenberger and Ronald Kates</small></li>
+<li>Maximum Capacity versus Safety for Cyclists - <small>Thomas Obst</small></li>
+<li><i>To be announced</i></li>
 </ul>
     </td>
   </tr>
@@ -476,7 +493,7 @@
   </tr>
 </tbody>
 </table>
-<small>Last update: 05.04.2024 - 14:29 CEST</small>
+<small>Last update: 19.04.2024 - 12:50 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</i></h3>
 <img src="../images/Steven_Jones.jpg" alt="picture of Dr. Steven Jones" style="width:100px; border-radius: 50%; margin-bottom:10px;">
