--- a/conference/index.html
+++ b/conference/index.html
@@ -303,9 +303,10 @@
     </td>
   </tr>
   <tr>
-    <td align="right">17:00</td>
+    <td align="right">17:15 - 18:15</td>
     <td colspan="2">
    <b>Evening Program - Social Event</b><br>
+   Guided tour of the Adlershof Science and Technology Park<br>
 <a style="color:#0645ad; cursor:pointer;" href="#social-event">Read more <i class="fas fa-angle-down"></i></a>
     </td>
   </tr>
@@ -493,7 +494,7 @@
   </tr>
 </tbody>
 </table>
-<small>Last update: 19.04.2024 - 12:50 CEST</small>
+<small>Last update: 23.04.2024 - 12:16 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</i></h3>
 <img src="../images/Steven_Jones.jpg" alt="picture of Dr. Steven Jones" style="width:100px; border-radius: 50%; margin-bottom:10px;">
@@ -525,7 +526,8 @@ The availability is limited.</p>
   <b>Non-EU nationals:</b> Please register well in advance to facilitate internal procedures and (if necessary) ensure a smooth visa application process.
 </div>
 <h1 id="social-event">Social Event</h1>
-<p><em>More info coming soon</em></p>
+<p><strong>Guided tour of the Adlershof Science and Technology Park (on May 13, 2024 - 17:15 - 18:15)</strong></p>
+<p>Guided tour through the Adlershof Science and Technology Park campus, with a focus on the history and development of aviation research at the site, visit to the large wind tunnel, spin tunnel and sound-absorbing engine test stand.</p>
 <!-- # FAQ
 
 <details> <!-- <details open> -->
